Finished hw3 (for now)

--- a/aero523_hw3/main.tex
+++ b/aero523_hw3/main.tex
@@ -48,7 +48,28 @@
                 label=l:findb,
                 caption={Matlab Code for determining A-Stable backwards differences.}
                 ]{q1/q1.m}
-        
+
+        \pagebreak
+        \section*{Matlab Code for Beam-Warming Method}
+        \lstinputlisting[
+                linewidth=0.95\textwidth,
+                xleftmargin=.1\textwidth,
+                language=matlab,
+                label=l:findb,
+                caption={Matlab Code for implementation of Beam-Warming method.}
+                ]{q2/q2.m}
+        \textcolor{white}{a}
+
+        \pagebreak
+        \section*{Matlab Code for Trapezoidal Method}
+        \lstinputlisting[
+                linewidth=0.95\textwidth,
+                xleftmargin=.1\textwidth,
+                language=matlab,
+                label=l:findb,
+                caption={Matlab Code for implementation of trapezoidal method.}
+                ]{q3/q3.m}
+        \textcolor{white}{a}
 \end{document}
 
 
