--- a/aero523_hw4/main.tex
+++ b/aero523_hw4/main.tex
@@ -38,16 +38,27 @@
         \import{q2/}{q2.tex}
 
         % Code attachments
-        %\pagebreak
-        %\section*{Matlab Code}
-        %\lstinputlisting[
-        %        linewidth=0.95\textwidth,
-        %        xleftmargin=.1\textwidth,
-        %        language=matlab,
-        %        label=l:findb,
-        %        caption={Matlab Code for Homework 4.}
-        %        ]{aero523_hw4.m}
-        %\textcolor{white}{Ah}
+        \pagebreak
+        \section*{Python Main Driving Code and Analytical Solution}
+        \lstinputlisting[
+                linewidth=0.95\textwidth,
+                xleftmargin=.1\textwidth,
+                language=python,
+                label=l:findb,
+                caption={Main driving Python code to conduct convergence studies.}
+                ]{q1/q1.py}
+        \textcolor{white}{a}
+        
+        \pagebreak
+        \section*{Python Implementation for Finite Volume Method}
+        \lstinputlisting[
+                linewidth=0.95\textwidth,
+                xleftmargin=.1\textwidth,
+                language=python,
+                label=l:findb,
+                caption={Implementation of finite volume method and convergence studies.}
+                ]{q1/fvm.py}
+        \textcolor{white}{a}
 \end{document}
 
 
