--- a/aero523_hw4/q1/q1.tex
+++ b/aero523_hw4/q1/q1.tex
@@ -16,12 +16,173 @@ For the numerical method, use the finite volume method (FVM) with $N_x$ uniform 
 \begin{enumerate}[label=\alph*., start = 1]
     \item Prior to implementing the FVM, determine the analytical solution using the method of characteristics. Plot the state, $u(x,t)$, at times $t= 0.5,\ 1.0,\ 1.5$ in one figure. In a separate figure, make a space-time diagram of the characteristics, up to $t= 1.5$, and indicate any shock speeds/paths.
 
+    \vspace{-0.25in}
+    \begin{align*}
+        \shortintertext{Firstly, to start out numbering the regions. Region 1 will be from $0\rightarrow 1$, Region 2 from $1\rightarrow 2$, Region 3 from $2\rightarrow 3$, Region 4 from $3\rightarrow 4$. This gives,}
+        \textbf{Region 1:}\quad & u(x,0) = 0\quad \forall\ x \in [0, 1)\\
+        \textbf{Region 2:}\quad & u(x,0) = x-1\quad \forall\ x \in [1, 2)\\
+        \textbf{Region 3:}\quad & u(x,0) = 3-x\quad \forall\ x \in [2, 3)\\
+        \textbf{Region 4:}\quad & u(x,0) = 0\quad \forall\ x \in [3, 4)\\
+        \shortintertext{This gives that the Initial condition can be expressed as}
+    \end{align*}
+
+    \vspace{-0.45in}
+    \begin{equation*}
+        u(x,t=0) = \begin{cases}
+            0 & x \in [0,1]\\
+            x - 1 & x \in [1,2]\\ 
+            3-x & x \in [2,3]\\ 
+            0 & x \in [3, 4]
+        \end{cases}
+    \end{equation*}
+
+    \vfill 
+    Continued on the next page \ldots 
+
 \end{enumerate}
+
+
+\pagebreak
+\pagestyle{fancy}
+\restoregeometry
+\begin{adjustwidth}{2.5em}{0pt}
+
+    \begin{align*}
+        \shortintertext{Then this gives that the solution to Burgers Equation is,}
+        u(x,t) & = u_0(x - ut)\\ 
+        \shortintertext{Where in Region 2, the expression can be given by,}
+        \frac{dx}{dt} & = x_0 - 1\\ 
+        x & = x_0 + t(x_0 - 1),\ x_0  = \frac{x+t}{1+t}\\
+        \shortintertext{Then again for Region 3, the expression is given by,}
+        \frac{dx}{dt} & = 3 - x_0\\ 
+        x & = x_0 + t(3-x_0),\ x_0  = \frac{x-3t}{1-t}\\
+        \shortintertext{Substituting back into the final cases for the characteristics and equations gives,}
+    \end{align*}
+
+    \vspace{-0.5in}
+    \begin{equation*}
+        \boxed{u(x,t \le 1) = \begin{cases}
+            0 & x \in [0,1]\\
+            \frac{x+t}{1+t} - 1 & x \in [1,2]\\ 
+            3 - \frac{x-3t}{1-t} & x \in [2,3]\\ 
+            0 & x \in [3, 4]
+        \end{cases},\qquad \frac{dx}{dt} = \begin{cases}
+            0 & x \in [0,1]\\
+            x_0 + t(x_0 - 1) & x \in [1,2]\\ 
+            x_0 + t(3-x_0) & x \in [2,3]\\ 
+            0 & x \in [3, 4]
+        \end{cases}}
+    \end{equation*}
+
+    \vspace{-0.25in}
+    \begin{align*}
+        \shortintertext{Then, for the case when a shock forms,}
+        s & = \frac{dx_s}{dt} = \frac{1}{2}(u_l + \cancelto{0}{u_r}) = \frac{1}{2}\left(\frac{x+t}{1+t} - 1\right)\\ 
+        \shortintertext{Then performing a simple differential equatoin with the initial condition $x_s(1)=3$, when the shock forms gives that the expression for the shocks location is,}
+        x_s & = 1 + \sqrt{2 + 2t}\\ 
+        \shortintertext{At this moment the right side of the shock will zero or $u_r=0$, so then then at times higher than the shock forms the expression is then}
+    \end{align*}
+
+    \vspace{-0.35in}
+    \begin{equation*}
+        \boxed{u(x, t> 1) = \begin{cases}
+            0 & x \in [0,1]\\
+            \frac{x+t}{1+t} - 1 & x \in [1,1+\sqrt{2+2t}]\\ 
+            0 & x \in [1+\sqrt{2+2t}, 4]
+        \end{cases}}
+    \end{equation*}
+
+    \vfill 
+    Continued on the next page \ldots 
     
+\end{adjustwidth}
+
+\pagebreak
+
+\begin{adjustwidth}{2.5em}{0pt}
+    Plotting the characteristics, and the state gives the following results,
+
+    \begin{figure}[h]
+        \centering
+        \begin{subfigure}[b]{0.45\linewidth}
+            \centering
+            \includegraphics[width = \linewidth]{q1/analytical.pdf}
+            \caption{Analytical expression for Burgers equation at varying times.}
+            \label{fig:analytical}
+        \end{subfigure}
+        \begin{subfigure}[b]{0.45\linewidth}
+            \centering
+            \includegraphics[width = \linewidth]{q1/characteristics.pdf}
+            \caption{Characteristics of the initial condition of the Burgers equation.}
+            \label{fig:characteristics}
+        \end{subfigure}
+        \caption{Plots of the analytical Burgers equation and its characteristics at varying times $t$.}
+        \label{fig:combined_analytical_characteristics}
+    \end{figure}
+
+    \begin{fminipage}{0.9\linewidth}
+        \textbf{As shown above in Figures \ref{fig:analytical}, \ref{fig:characteristics} are the implementations of the analytical solution and the characteristics in Python. Shown above in \ref{fig:analytical} is the actual shock paths as the time varies. At time $\bf t=1$, the shock first forms the discontinuity. Denoted in Figure \ref{fig:characteristics} by the black line is the shock path following the line $\bf x_s = 1+\sqrt{2 + 2t}$ for times greater than ``1'' after the shock forms.}
+    \end{fminipage}
+\end{adjustwidth}
+
+
+\pagebreak    
 \begin{enumerate}[label=\alph*., start = 2]
     \item Implement the FVM and using $N_x$= 128 and $N_x$= 512, show the states at the same times as requested in the previous part. Make three plots, one for each time, and overlay the two $N_x$ results and the analytical solution on each plot. Comment on the differences.
+    
+    \vspace{-0.15in}
+    \begin{figure}[h!]
+        \centering
+        \begin{subfigure}[h]{0.7\linewidth}
+            \centering
+            \includegraphics[width = \linewidth]{q1/t05.pdf}
+            \caption{Burgers equation approximated solutions at time $t=0.5$ for $N_x=128,\ N_x =512$.}
+            \label{fig:q1_t05}
+        \end{subfigure}
+        \begin{subfigure}[h]{0.7\linewidth}
+            \centering
+            \includegraphics[width = \linewidth]{q1/t10.pdf}
+            \caption{Burgers equation approximated solutions at time $t=1.0$ for $N_x=128,\ N_x =512$.}
+            \label{fig:q1_t10}
+        \end{subfigure}
+        \begin{subfigure}[h]{0.7\linewidth}
+            \centering
+            \includegraphics[width = \linewidth]{q1/t15.pdf}
+            \caption{Burgers equation approximated solutions at time $t=1.5$ for $N_x=128,\ N_x =512$.}
+            \label{fig:q1_t15}
+        \end{subfigure}
+        \caption{Implementation of the Finite Volume Method (FVM) at varying times.}
+        \label{fig:q1_shocks}
+    \end{figure}
+
+    \begin{fminipage}{0.8\linewidth}
+        \textbf{Shown above in Figure \ref{fig:q1_shocks} is the approximated solution to Burgers equation and the forming shock. Uniform across all the times, is that at a higher $\bf N_x$ value there is a better approximation to analytical solution. Shown best in Figure \ref{fig:q1_t10} is how the approximated finite volume method bends around the shock arising from the weak solution.}
+    \end{fminipage}
 \end{enumerate}
     
+\pagebreak
 \begin{enumerate}[label=\alph*., start = 3]
     \item Perform a convergence study of the FVM, using the $L_2$ solution error norm at $t = 0.5$, for $N_x= 128,\ 256,\ 512,\ 1024.$  Include an error convergence plot and compute/discuss the rate.
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[width = 0.9\linewidth]{q1/convergence.pdf}
+        \caption{Convergence studies for the finite volume method}
+        \label{fig:q1_converge}
+    \end{figure}
+
+    \begin{fminipage}{0.8\linewidth}
+        \textbf{Shown above in Figure \ref{fig:q1_converge} is the $\bf L_2$ solution error norm for the finite volume method. As shown in the figure, this implementation has a convergence of $\bf \approx \mathcal{O}(1)$ indicating that it is first-order accurate. Shown below in Table \ref{tab:q1_convergences} are the converge rates at each interval stepping to the next confirming first-order accuracy.}
+    \end{fminipage}
+
+
+    \begin{table}[h]
+        \centering
+        \caption{Convergence rates for the finite volume method.}
+        \label{tab:q1_convergences}
+        \begin{tabular}{l | l}
+            Intervals & Rate\\\hline\hline
+            \input{q1/convergences}
+        \end{tabular}
+    \end{table}
 \end{enumerate}
