--- a/aero523_proj2/admin/apps.tex
+++ b/aero523_proj2/admin/apps.tex
@@ -30,4 +30,16 @@
         caption={Python Read Grid}\label{alg:readgri}
     ]{rep/readgri.py}
 
+    \pagebreak
+    \section{Roe Flux Python Implementation}
+
+    \lstinputlisting[
+        linewidth=0.95\textwidth,
+        xleftmargin=.1\textwidth,
+        language=python,
+        label=l:findb,
+        caption={Roe Flux Implementation}\label{alg:roe_flux}
+    ]{rep/flux.py}
+
+
 \end{appendices}
