--- a/aero523_proj2/main.tex
+++ b/aero523_proj2/main.tex
@@ -1,5 +1,6 @@
-\documentclass[12pt]{extarticle}
+\documentclass[12pt]{article}
 \usepackage{Format}
+\usepackage[nottoc]{tocbibind}
 %\usepackage[draft]{graphicx}
 \usepackage{graphicx}
 
@@ -24,4 +25,8 @@
     \import{admin/}{apps.tex}
 
 
+    \pagebreak
+    \bibliographystyle{ieeetr}
+    \bibliography{ref}
+    
 \end{document}
