--- a/aero523_proj2/admin/intro.tex
+++ b/aero523_proj2/admin/intro.tex
@@ -23,7 +23,7 @@ In this project you will simulate supersonic flow through a two-dimensional scra
 
 where $M_\infty$ is the free-stream Mach number, and $\alpha$ is the angle of attack.
 
-\paragraph{Initial and Boundary Conditions:} The computational domain consists of the region around the engine. The inflow portion of the far-field rectangle consists of the left and bottom boundaries. On these boundaries apply free-stream ``full-state'' conditions, with a free-stream Mach number of $M_\infty = 2.0$. You will investigate angles of attack in the range $\alpha \in [0, 3\degree]$, with a baseline value of $\alpha = 1\degree$. On the outflow and engine exit boundaries, assume that the flow is supersonic, which means that no boundary state is needed -- the flux is computed from the interior state. On the engine surface, apply the inviscid wall boundary condition.
+\paragraph{Initial and Boundary Conditions:} The computational domain consists of the region around the engine. The inflow portion of the far-field rectangle consists of the left and bottom boundaries. On these boundaries apply free-stream ``full-state'' conditions, with a free-stream Mach number of $M_\infty = 2.2$. You will investigate angles of attack in the range $\alpha \in [0, 3\degree]$, with a baseline value of $\alpha = 1\degree$. On the outflow and engine exit boundaries, assume that the flow is supersonic, which means that no boundary state is needed -- the flux is computed from the interior state. On the engine surface, apply the inviscid wall boundary condition.
 
 When initializing the state in a new run, i.e. not when restarting from an existing state, you can set all cells to the same state, based on the free-stream Mach number, $M_\infty$.
 
@@ -46,19 +46,19 @@ Use the first-order finite volume methods to solve for the flow through the engi
 \paragraph{Discretization:} From the notes, cell $i$'s average, $(\bf{u}_i)$, evolves in time according to
 
 \begin{equation}\label{eqn:cell_avg}
-    A_i\frac{d\bf{u}_i}{dt} + \bf{R}_i = 0 \rightarrow \frac{d\bf{u}_i}{dt} = -\frac{1}{A_i}\bf{R}_i.
+    A_i\frac{d\bf{u}_i}{dt} + {\bf{R}_i = 0} \rightarrow \frac{d{\bf{u}_i}}{dt} = -\frac{1}{A_i}\bf{R}_i.
 \end{equation}\myequations{Cell Average}
 
 where the flux residual $\bf{R}_i$ for a triangular cell is
 
 \begin{equation}\label{eqn:flux_residual}
-    {\bf{R}_i} = \sum_{e=1}^{3} {\bf{\hat{F}(u_u,u_{N(i,e)}}},\vec{n}_{i,e})\Delta l_{i,e}
+    {\bf{R}_i} = \sum_{e=1}^{3} {\bf{\hat{F}(u_i,u_{N({i,e})}}},\vec{n}_{i,e})\Delta l_{i,e}
 \end{equation}\myequations{Flux Residual}
 
 Recall that $N(i,e)$ is the cell adjacent to cell $i$ across edge $e$, and $\vec{n}_{i,e} , \Delta l_{i,e}$ are the outward normal and length on edge $e$ of cell $i$. Discretize Equation \ref{eqn:cell_avg} with forward Euler time integration and use local time stepping to drive the solution to steady state.
 
 \paragraph{Local Time Stepping:} To implement local time stepping, a vector of time steps is calculated,
-one time step for each cell: $\Delta t_i$ . Specifically, define the CFL number for cell $i$ to be,
+one time step for each cell: $\Delta t_i$. Defining the CFL number for cell $i$ as,
 
 \begin{equation}\label{eqn:CFL}
     \text{CFL}_i = \frac{\Delta t_i}{2A_i}\sum_{e=1}^{3}|s|_{i,e}\Delta l_{i,e},
@@ -67,13 +67,14 @@ one time step for each cell: $\Delta t_i$ . Specifically, define the CFL number 
 where $A_i$ is the area of the cell, the summation is over the three edges of a cell, and $|s|_{i,e}$ is the
 maximum propagation speed for edge $e$.
 
-Time stepping requires the value of $\Delta t/A_i$ for each cell, and this can be calculated by re-arranging
+Time stepping requires the value of $\Delta t_i/A_i$ for each cell, and this can be calculated by re-arranging
 Equation \ref{eqn:CFL},
 
 \begin{equation}\label{eqn:time_stepping}
     \frac{\Delta t_i}{A_i} = \frac{2\text{CFL}_i}{\sum_{e=1}^{3}|s|_{i,e}\Delta l_{i.e}}.
 \end{equation}\myequations{Time Stepping}
 
+\pagebreak
 The easiest method to calculate the right-hand-side is to calculate the summation of $|s|_e \Delta l_{i,e}$ during the flux evaluations. Note that the propagation speed $|s|_{i,e}$ should be calculated by the flux function. In local time stepping, the CFL number for each cell is the same: $\text{CFL}_i = \text{CFL} = 1.0$ is a good choice for this project.
 
 \paragraph{Residuals and Convergences:} Assess convergence by monitoring the undivided $L_1$ norm of the residual vector, defined as
@@ -89,7 +90,7 @@ That is, take the sum of the absolute values of all of the entries in your resid
 \begin{itemize}
     \item Consistency check: ${\bf F(u_L, u_L}, \vec{n})$ should be the same as $ {\bf \vec{F}(U_L)}\cdot \vec{n}$ (the analytical flux dotted with the normal).
     \item Flipping the direction: check that $ {\bf F(u_L, u_R} , \vec{n} ) =  {\bf-F(u_R , u_L }, -\vec{n} )$.
-    \item States with supersonic normal velocity: the flux function should return the analytical flux from the upwind state. The downwind state should not have any effect on the flux.
+    \item States with supersonic normal velocity: the flux function should return the analytical flux from the upwind state. The downwind state should not have any effect on flux.
 \end{itemize}
 
 
@@ -108,7 +109,7 @@ where $\Delta t^n_i$ is the local time step computed from the state at time step
 \begin{figure}[h]
     \centering
     \includegraphics[width = 0.75\linewidth]{admin/baseline_mesh.pdf}
-    \caption[Baseline Mesh]{Baseline mesh.}
+    \caption[Scramjet Baseline Mesh]{Scramjet baseline mesh.}
     \label{fig:baseline_mesh}
 \end{figure}
 
